Bug 1981987 - Fix z-index of active countdown in Timer Widget. r=home-newtab-reviewers,npypchenko
Differential Revision: https://phabricator.services.mozilla.com/D260617

--- a/browser/extensions/newtab/content-src/components/Widgets/FocusTimer/_FocusTimer.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/FocusTimer/_FocusTimer.scss
@@ -145,7 +145,7 @@
     justify-content: center;
     position: absolute;
     width: 100%;
-    z-index: 10;
+    z-index: 2;
   }
 }
 
